feat: add core domain models, use cases, and adapters for forensic certification